AEM-3796 - Testimonials PR - swipe custom AXA events added. - min height calculated for different height content. - swipe animation overflow fixed.

--- a/src/components/o-testimonials/index.scss
+++ b/src/components/o-testimonials/index.scss
@@ -107,6 +107,8 @@ $o-testimonials-author-position-bottom: -40px;
 
 .o-testimonials__navigator {
   display: flex;
+  overflow: hidden;
+  padding: 0 $o-testimonials-arrow-width-xs;
 
   margin: $o-testimonials-navigator-margin-top-xs $o-testimonials-navigator-margin-horizontal-xs $o-testimonials-navigator-margin-bottom-xs $o-testimonials-navigator-margin-horizontal-xs;
 
